# python-project-template

./: .pypirc  README.md  pyproject.toml
src/mypackage/: mymodule.py
tests/: test_something.py
