[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name =  "python-project-template"
authors = [
    {name = "Marcel Goldschen-Ohm", email = "goldschen-ohm@utexas.edu"},
    {email = "marcel.goldschen@gmail.com"},
]
description = "Python project template"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8.1"
dynamic = ["version"]
dependencies = [
  "numpy",
]

[project.optional-dependencies]
test = [
    "pytest==7.3.1",
    "pytest-github-actions-annotate-failures",
]

[project.urls]
Documentation = "https://github.com/marcel-goldschen-ohm/python-project-template/tree/main#readme"
Source = "https://github.com/marcel-goldschen-ohm/python-project-template"
Tracker = "https://github.com/marcel-goldschen-ohm/python-project-template/issues"

[tool.flit.module]
name = "python_package"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = "tests"
